# PhotoBox_Experimente

./: .~lock.charuco_board.pdf#  CMakeLists.txt  LICENSE  aruco_mittelpunkt.ipynb  aruco_multicamera.ipynb  aruco_wuerfel.ipynb  aruco_wuerfel_focus.ipynb  aruco_wuerfel_typen.ipynb  ausgleichung.ipynb  ausgleichung_manuell.ipynb  cam_test.cpp  camera_matrix.csv  cct_decode.ipynb  charuco_board.pdf.aux.xml  charuco_calibration.ipynb  charuco_test.ipynb  distortion_coefficients.csv  dji_kameras.csv  focusStack.ipynb  fokusstack.ods  funktionen.py  pb_kameras.csv  pb_pictures.csv  schaerfentiefe.ipynb  ueberwachung.py  wuerfel_coords.csv  wuerfel_coords_neu.csv  wuerfel_kameras.csv  wuerfel_pictures.csv  wuerfel_pictures_neu.csv  wuerfel_typen.csv
Fokus/: VorkalibrierungKameras.ods  camera_matrixF3.npy  camera_matrixF5.npy  camera_parameters.xml  distortion_coefficientsF3.npy  distortion_coefficientsF5.npy  focusStack.ipynb  fokus.csv  fokus.ods  fokus_faktor.csv  fokus_faktor.ipynb  fokus_faktor_alle_bilder.ipynb  fokus_faktor_diagramm.ipynb  fokus_faktor_diagramm.py  fokus_verzeichnung.ipynb  project_12345_vorkalibriert_fxy123_cameras.xml  rest_klaffen.ipynb  rotationsmatrix_umrechnen.ipynb
agisoftConnector/: agiConnect.py  licence.lic
cpp/: build.sh  opencv  opencv.cpp
cpp_modules/: helloworld.cpp  main.cpp
etc/: aruco.ipynb  aruco_multicamera.ipynb  aruco_multicamera2.ipynb  ausgleichung.ipynb  coords.csv  dji_pictures.csv  pb_coords.csv  ueberwachung.py  webcam.py  webcam2.py
